# roll-table

./: .gitignore  README.md  TODO.md  pyproject.toml
data/tables/: 2d6.csv  test1.csv  test2.csv  test3.csv  test_dice.csv  test_roll_column.csv  test_warnings.csv  trade_goods.csv  trade_goods_sentence.csv
data/tables/common_electronics/: adjective.csv  example.csv  form.csv  purpose.csv
data/tables/common_industrial/: adjective.csv  example.csv  form.csv  kind.csv  processing_kind.csv  reactor_kind.csv
src/roll_table/: __init__.py  cli.py  errors.py  logger_adapter.py  table.py  table_manager.py  utils.py
src/roll_table/parsing/: __init__.py  directive.py  expression.py  line.py
