[project]
name = "roll-table"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Anderson Kagel", email = "Anderson.Kagel@gmail.com" }]
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = ["packages/*"]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
